<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.TimeFilterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.skillcinema.presentation.custom.PageNameTextLine
                android:id="@+id/pageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="26dp"
                app:pageName="@string/period" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="37dp"
                android:text="@string/search_from"
                android:textColor="@color/secondaryTextColor"
                android:textSize="14sp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/yearFromContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="37dp"
                android:text="@string/search_until"
                android:textColor="@color/secondaryTextColor"
                android:textSize="14sp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/yearToContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/selectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/selectedElementBackground"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:text="@string/select"
                android:textAllCaps="false"
                android:textColor="@color/selectedTextColor"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>