<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.SearchSettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.skillcinema.presentation.custom.PageNameTextLine
                android:id="@+id/pageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="26dp"
                app:pageName="@string/search_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:text="@string/show"
                android:textColor="@color/secondaryTextColor"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/horizontal_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/tab_unselect_background"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/allFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:background="@drawable/left_tab_background_selector"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/all"
                        android:textColor="@color/text_color_selector"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/moviesFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-1dp"
                        android:layout_marginEnd="-1dp"
                        android:layout_weight="0.4"
                        android:background="@drawable/center_tab_background_selector"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/movies"
                        android:textColor="@color/text_color_selector"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/seriesFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:background="@drawable/right_tab_background_selector"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/series"
                        android:textColor="@color/text_color_selector"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/countryLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/country"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:text="@string/all"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/genreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/genre"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:text="@string/all"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/yearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/year"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/yearRange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:text="@string/does_not_matter"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/rating"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/ratingText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="end"
                            android:text="@string/does_not_matter"
                            android:textColor="@color/secondaryTextColor"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/ratingSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:stepSize="1"
                        android:valueFrom="0"
                        android:valueTo="10"
                        app:labelBehavior="gone"
                        app:thumbColor="@color/slider_thumb_color"
                        app:thumbStrokeWidth="1dp"
                        app:tickVisible="false"
                        app:trackColorActive="@color/slider_active_color"
                        app:trackColorInactive="@color/slider_inactive_color"
                        app:values="@array/rating_slider" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/sorting"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:id="@+id/sortingFilter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="26dp"
                        android:background="@drawable/tab_unselect_background"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/dateFilter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:background="@drawable/left_tab_background_selector"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/date"
                            android:textColor="@color/text_color_selector"
                            android:textSize="14sp" />


                        <TextView
                            android:id="@+id/popularityFilter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-1dp"
                            android:layout_marginEnd="-1dp"
                            android:layout_weight="0.4"
                            android:background="@drawable/center_tab_background_selector"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/popularity"
                            android:textColor="@color/text_color_selector"
                            android:textSize="14sp" />


                        <TextView
                            android:id="@+id/ratingFilter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:background="@drawable/right_tab_background_selector"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/rating"
                            android:textColor="@color/text_color_selector"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/viewedFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/isViewedIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/search_not_viewed_icon" />

                    <TextView
                        android:id="@+id/isViewedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:text="@string/not_viewed"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/defaultSettings"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/selectedElementBackground"
                        android:text="@string/default_settings"
                        android:layout_marginBottom="30dp"
                        android:textColor="@color/selectedTextColor"
                        app:cornerRadius="10dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>